src/tests/fixtures/custom_scalars/SpecifiedByMissingUrlinvalid.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlScalar
 * @gqlAnnotate specifiedBy
 */
export type UUID = string;

-----------------
OUTPUT
-----------------
GraphQL request:1:1 - error: Directive "@specifiedBy" argument "url" of type "String!" is required, but it was not provided.

1 @specifiedBy
  ~~~~~~~~~~~~
